<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.android.maps.MapView
	    android:id="@+id/mapview"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:clickable="true"
	    android:apiKey="0E9FUlCNBNxYsVS5nDUf0CuPbfMkE_-6b2uw7YA"/>
    
    <Button 
        android:id="@+id/locate_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/locate_me"
        android:onClick="locateMe"
        android:background="@drawable/button_drawable"
	    android:textColor="@color/dialog_background_stroke_color"
	    android:textStyle="bold"/>
        
    <Button 
        android:id="@+id/check_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/check_location"
        android:onClick="checkLocation"
        android:background="@drawable/button_drawable"
	    android:textColor="@color/dialog_background_stroke_color"
	    android:textStyle="bold"/>
    
    <Button 
        android:id="@+id/show_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:text="@string/show_hint"
        android:onClick="showHint"
        android:background="@drawable/button_drawable"
	    android:textColor="@color/dialog_background_stroke_color"
	    android:textStyle="bold"/>
    
    <RelativeLayout 
        android:id="@+id/shadow_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/shadow_map_color"
        android:visibility="invisible">
    
	    <RelativeLayout 
	        android:id="@+id/dialog_layout"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/dialog_drawable"
	        android:layout_centerInParent="true"
	        android:layout_margin="5dp">
	        
	        	<ImageView 
	        	    android:id="@+id/icon_dialog"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:scaleType="center"
	        	    android:layout_alignParentLeft="true"
	        	    android:src="@drawable/me_location"/>
	        	
	        	<TextView 
	        	    android:id="@+id/message_dialog"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:layout_toRightOf="@id/icon_dialog"
	        	    android:layout_below="@id/icon_dialog"
	        	    android:textStyle="bold"
	        	    android:textColor="@color/text_color"/>
	        	
	        	<EditText
	        	    android:id="@+id/message_enter_data"
	        	    android:layout_width="match_parent"
	        	    android:layout_height="wrap_content"
	        	    android:layout_below="@id/message_dialog"/>
	        	
	        	<Button 
	        	    android:id="@+id/action_dialog"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:layout_centerHorizontal="true"
	        	    android:layout_below="@id/message_enter_data"
	        	    android:onClick="doActionDialog"
	        	    android:background="@drawable/button_drawable"
	    			android:textColor="@color/dialog_background_stroke_color"
	    			android:textStyle="bold"/>
	        	
	        	<Button 
	        	    android:id="@+id/search_dialog"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:layout_alignParentRight="true"
	        	    android:layout_below="@id/message_enter_data"
					android:onClick="searchInfo"
					android:background="@drawable/button_drawable"
	    			android:textColor="@color/dialog_background_stroke_color"
	    			android:textStyle="bold"/>
	        	
	    </RelativeLayout>
	</RelativeLayout>
</RelativeLayout>
